--- a/css/style.css
+++ b/css/style.css
@@ -283,17 +283,22 @@ body {
 }
 
 @media (max-width: 576px) {
-  .btn-container {
-    margin: auto;
+  .grade {
+    text-align: center;
+    margin: 0 5px;
+    padding: 10px 15px;
+    border-radius: 5px;
+    font-size: 14px;
+    line-height: 124%;
+    font-family: Poppins, Roboto, Verdana, Helvetica, Arial, sans-serif;
+    font-weight: 500;
   }
 }
 
 /* Small devices (landscape phones, 576px and up) */
-@media (min-width: 576px) {
-  body {
-    font-size: 16px;
-  }
+@media (max-width: 768px) {
   .btn-container {
-    margin: auto 0;
+    margin: 0 auto;
+    text-align: center;
   }
 }
